# simple_collector_processor

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
cicd/: build_images.yml  push_images.yml
cmake/: simple_kafka.cmake  simple_polygon_io.cmake  simple_redis.cmake  trading_common.cmake
include/collector/: config.h  exceptions.h  kafkaforwarder.h  processor.h  processor.ipp
src/: config.cpp  exceptions.cpp  processor.cpp
tests/: CMakeLists.txt  test_config.cpp  test_exceptions.cpp  test_kafkaforwarder.cpp  test_processor.cpp
